# web1

./: Dockerfile  README.md  pyproject.toml
project/: settings.py  urls.py
static/css/: styles.css
templates/: base.html  boat.html  home.html  motorbike.html  plane.html  subway.html  train.html
templates/car/: car.html
templates/registration/: login.html  signup.html
web/: admin.py  models.py  views.py
